# Categorizer

./: .gitignore  README.md  categorizer.py  csv_columns.py  parsing.py  pyproject.toml  requirements.txt  schemas.py  storage.py  textutil.py
Schema/: README.md  categorized-record.schema.json  category-rule.schema.json  category-summary-row.schema.json  classification-result.schema.json  rule-match-result.schema.json  schema-index.json
tests/: test_categorizer.py  test_storage.py  test_textutil.py
