[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ll-categorizer"
version = "0.1.0"
description = "Rule-based bank CSV transaction categorization (ll_categorizer)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy",
    "black",
    "flake8",
]

[project.scripts]
ll-categorizer = "categorizer:main"

[tool.setuptools]
py-modules = [
    "categorizer",
    "csv_columns",
    "parsing",
    "schemas",
    "storage",
    "textutil",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
strict_optional = true
